# HW6-HMM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: full_weather_hmm.npz  full_weather_input_output.npz  full_weather_sequences.npz  mini_weather_hmm.npz  mini_weather_sequences.npz  small_weather_hmm.npz  small_weather_input_output.npz
hmm/: __init__.py  hmm.py
test/: test_actual_data.py  test_hmm.py
viterbi/: __init__.py  decoders.py  hmm.py
