[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hmm"
authors = [{name = "Shu Zhang", email = "shu.zhang2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "scipy", "matplotlib", "numpy", "scikit-learn"
]

[project.urls]
Home = "https://github.com/BMI203-2024/HW6-HMM"