[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hmm"
authors = [{name = "Yujie Zhang", email = "yujie.zhang@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy" 
]

[project.urls]
Home = "https://github.com/zyj1729/HW6-HMM/"